# riosaude_documentacao

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
about/: index.html
backend/schemas/: schema_consolidado_cnes.py  schema_dgp_cnes.py  schema_irs_gerencial.py
consolidado_cnes/documentacao_consolidado_cnes/: index.html
consolidado_cnes/versao_consolidado_cnes/: index.html
css/: custom.css  extra.css
docs/: about.md  index.md
docs/consolidado_cnes/: documentacao_consolidado_cnes.md  versao_consolidado_cnes.md  versions.md
docs/css/: extra.css
docs/irs_gerencial/: documentacao_irs_gerencial.md  esquema_irs_gerencial.md  regras_negocio_irs_gerencial.md  versao_irs_gerencial.md
irs_gerencial/documentacao_irs_gerencial/: index.html
irs_gerencial/esquema_irs_gerencial/: index.html
irs_gerencial/regras_negocio_irs_gerencial/: index.html
irs_gerencial/versao_irs_gerencial/: index.html
